--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,22 @@
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
   }
+ .video-container {
+   width: 100%;
+   aspect-ratio: 16 / 9;
+ }
+ 
+ .video {
+   width: 100%;
+   height: 100%;
+ }
+}
+.video-container {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+}
+
+.video {
+  width: 100%;
+  height: 100%;
 }
