--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
   height: 100%;
 }
 body {
-    font-family: Georgia, Helvetica, Verdana, sans-serif;
+    font-family: Helvetica, Verdana, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #333; /* Dark gray for better contrast and reduced strain */
